--- a/_layouts/pub.html
+++ b/_layouts/pub.html
@@ -4,9 +4,13 @@ layout: default
 
 <small>{{ page.date | date: "%-d %B %Y" }}</small>
 <h1>{{ page.title }}</h1>
+<h4>{{ page.authors | join: ', ' }}</h4>
+<h2>Abstract</h2>
 
 {{content}}
 
+<a href="https://{{ page.link }}"><i class="fas fa-file-pdf"></i></a>
+<p></p>
 {% if page.tags %}
   <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
 {% endif %}
