--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -3,7 +3,7 @@
 
 body {
   background-color: #fff;
-  padding:50px;
+  padding:em;
   font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#727272;
   font-weight:400;
@@ -26,8 +26,24 @@ h1 {
   font-size:28px;
 }
 
+h1 a{
+  color:#393939;
+}
+
+h1 a:hover{
+  color:#bbbbbb;
+}
+
 h2 {
   color:#393939;
+}
+
+h2 a{
+  color:#393939;
+}
+
+h2 a:hover{
+  color:#bbbbbb;
 }
 
 h3, h4, h5, h6 {
@@ -41,7 +57,6 @@ a {
 
 a:hover, a:focus {
   color:#069;
-  font-weight: bold;
 }
 
 a small {
@@ -56,7 +71,7 @@ a:hover small {
 }
 
 .wrapper {
-  width:860px;
+  width:900px;
   margin:0 auto;
 }
 
@@ -102,13 +117,6 @@ th {
 
 img {
   max-width:100%;
-}
-
-header {
-  width:270px;
-  float:left;
-  position:fixed;
-  -webkit-font-smoothing:subpixel-antialiased;
 }
 
 ul.downloads {
@@ -172,7 +180,7 @@ strong {
 }
 
 section {
-  width:500px;
+  width:600px;
   float:right;
   padding-bottom:50px;
 }
@@ -196,7 +204,7 @@ footer {
   -webkit-font-smoothing:subpixel-antialiased;
 }
 
-@media print, screen and (max-width: 960px) {
+@media print, screen and (max-width: 860px) {
 
   div.wrapper {
     width:auto;
