--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,7 +12,7 @@
     <a href="{{ site.github.owner_url }}"><i class="fab fa-github"></i></a>
     <a href="https://www.linkedin.com/in/filipkaklin"><i class="fab fa-linkedin"></i></a>
   </div>
-  <h2 class="content-tab"><a href="/pubs/">Publications</a></h2>
-  <h2 class="content-tab"><a href="/side/">Side Projects</a></h2>
+  <h2 class="content-tab"><a href="{{ "/pubs/" | relative_url }}">Publications</a></h2>
+  <h2 class="content-tab"><a href="{{ "/side/" | relative_url }}>Side Projects</a></h2>
   <!-- <h2 class="content-tab"><a href="/about/">About me</a></h2> -->
 </header>
