--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,5 +14,5 @@
   </div>
   <h2 class="content-tab"><a href="{{ "/pubs" | relative_url }}">Publications</a></h2>
   <h2 class="content-tab"><a href="{{ "/side" | relative_url }}">Side Projects</a></h2>
-  <!-- <h2 class="content-tab"><a href="/about/">About me</a></h2> -->
+  <!-- <h2 class="content-tab"><a href={{ "/about" | relative_url }}">About me</a></h2> -->
 </header>
