--- a/_layouts/side.html
+++ b/_layouts/side.html
@@ -1,42 +1,20 @@
-{% include header.html %}
-  <body>
-    <div class="wrapper">
-      <div class="grid-container">
-        <div class="sidebar">
-          {% include sidebar.html %}
-        </div>
-        <div class="content">
+---
+layout: default
+---
 
-        {{ content }}
+<small>{{ page.date | date: "%-d %B %Y" }}</small>
+<h1>{{ page.title }}</h1>
+<h4>{{ page.authors | join: ', ' }}</h4>
+<h2>Abstract</h2>
 
-        {% assign sides = site.posts | where: "categories","side" %}
-        {% assign num_posts = sides | size %}
-        {% if num_posts > 0 %}
-          {% for side in sides  %}
-              <small>{{ post.date | date: "%-d %B %Y" }}</small>
-              <h1><a href="{{ post.url }}">{{ post.title}}</a></h1>
-              <p>{{ post.excerpt }} <a href="{{ post.url }}">continue...</a></p>
-          {% endfor %}
-        {% else %}
-          <p>No posts yet. </p>
-        {% endif %}
+{{content}}
 
-        </div>
-        <div class="footer">
-          <p><small>Hosted on GitHub Pages</small></p>
-        </div>
-      </div>
-    </div>
-    <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
-    {% if site.google_analytics %}
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', '{{ site.google_analytics }}', 'auto');
-      ga('send', 'pageview');
-    </script>
-    {% endif %}
-  </body>
-</html>
+{% if page.doi %}
+<p><strong>DOI: <a href="https://doi.org/{{ page.doi }}">{{page.doi}}</a></strong></p>
+{% endif %}
+<p>
+<a href="https://{{ page.link }}"><i class="fas fa-file-pdf"></i></a>
+</p>
+{% if page.tags %}
+  <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
+{% endif %}
