--- a/_sass/jekyll-alternative-minimal.scss
+++ b/_sass/jekyll-alternative-minimal.scss
@@ -47,6 +47,11 @@ h2 a:hover{
   color:#bbbbbb;
 }
 
+.active {
+  // text-decoration: underline;
+  border-bottom: 3px solid;
+}
+
 h3, h4, h5, h6 {
   color:#494949;
 }
@@ -114,6 +119,10 @@ a:hover small {
 .footer {
   grid-area: footer;
   text-align: center;
+}
+
+.content-tab {
+  
 }
 
 blockquote {
