--- a/_sass/jekyll-alternative-minimal.scss
+++ b/_sass/jekyll-alternative-minimal.scss
@@ -3,10 +3,12 @@
 
 body {
   background-color: #fff;
-  padding:30px;
+  padding:20px;
   font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#727272;
   font-weight:400;
+  margin: 0;
+  margin-top: 1.5em;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -16,6 +18,7 @@ h1, h2, h3, h4, h5, h6 {
 
 p, ul, ol, table, pre, dl {
   margin:0 0 20px;
+  color:#444;
 }
 
 h1, h2, h3 {
@@ -90,12 +93,13 @@ a:hover small {
 }
 
 .wrapper {
-  max-width:900px;
+  max-width: 930px;
   margin:0 auto;
 }
 
 .grid-container {
   // justify-content: center;
+  max-width: 680px;
   min-height: 90vh;
   display: grid;
   grid-template-areas: 
@@ -103,17 +107,19 @@ a:hover small {
     "footer feed";
   grid-template-rows: auto 3em;
   grid-template-columns: 1fr 2fr;
-  padding: 10px;
-  grid-column-gap: 30px;
+  // padding: 10px;
+  grid-column-gap: 20px;
   grid-row-gap: 20px;
 }
 
 .sidebar {
   grid-area: sidebar;
+  min-width: 200px;
 }
 
 .content {
   grid-area: feed;
+  max-width: 680px;
 }
 
 .footer {
@@ -189,6 +195,11 @@ header > .image_wrapper {
   text-align: center;
 }
 
+#notebook {
+  // max-width: 100%;
+  // width: 90vw;
+}
+
 strong {
   color:#222;
   font-weight:700;
@@ -244,7 +255,7 @@ hr {}
 footer {}
 
 
-@media print, screen and (max-width: 640px) {
+@media print, screen and (max-width: 930px) {
   body {
     word-wrap: break-word;
   }
@@ -276,11 +287,22 @@ footer {}
       "footer";
     grid-template-rows: auto auto auto;
     grid-template-columns: auto;
-
     padding: 0px;
-    grid-column-gap: 20px;
+    grid-column-gap: 10px;
     grid-row-gap: 20px;
+    max-width: 100vw;
+
   }
+  .f {
+    max-width: 580px;
+    margin: 0 auto;
+  }
+
+  .wrapper {
+    max-width: 680px;
+    margin:0 auto;
+  }
+
 }
 
 @media print, screen and (max-width: 480px) {
