--- a/_layouts/jnotebook.html
+++ b/_layouts/jnotebook.html
@@ -1,11 +1,8 @@
 ---
 layout: default
 ---
-
 <small>{{ page.date | date: "%-d %B %Y" }}</small>
-<!-- <h1>{{ page.title }}</h1> -->
-<h4>{{ page.authors | join: ', ' }}</h4>
-
+<p></p>
 {{ content }}
 
 <div id="notebook">
@@ -15,7 +12,7 @@ layout: default
 <script type='text/javascript'>
     var notebook = document.getElementById('notebook');
     var request = new XMLHttpRequest();
-       request.open("GET", "https://raw.githubusercontent.com/kaklin/sq-limit/master/SQ_limit.ipynb", false);
+       request.open("GET", "{{page.notebook_path}}", false);
        request.send(null)
        var my_JSON_object = JSON.parse(request.responseText);
     var nb = my_JSON_object
