adjust layout back to centre

--- a/_sass/jekyll-alternative-minimal.scss
+++ b/_sass/jekyll-alternative-minimal.scss
@@ -99,7 +99,7 @@ a:hover small {
 
 .grid-container {
   // justify-content: center;
-  max-width: 680px;
+  // max-width: 680px;
   min-height: 90vh;
   display: grid;
   grid-template-areas: 
