--- a/_sass/jekyll-alternative-minimal.scss
+++ b/_sass/jekyll-alternative-minimal.scss
@@ -106,8 +106,8 @@ a:hover small {
     "sidebar feed" 
     "footer feed";
   grid-template-rows: auto 3em;
-  grid-template-columns: 1fr 2fr;
-  // padding: 10px;
+  grid-template-columns: 1fr 3fr;
+  padding: 10px;
   grid-column-gap: 20px;
   grid-row-gap: 20px;
 }
