Add simple boids and readme

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,4 +33,11 @@
       });
     </script>
     {% endif %}
+
+    {% if page.script_module %}
+    <script type="module">
+      {% include {{ page.script_path }} %}
+    </script>
+    {% endif %}
+
   </head>
