--- a/_sass/jekyll-alternative-minimal.scss
+++ b/_sass/jekyll-alternative-minimal.scss
@@ -1,18 +1,20 @@
 @import "fonts";
 @import "rouge-github";
 
+* {
+  box-sizing: border-box;
+}
+
 html {
-  overflow-y: scroll;
 }
 
 body {
   background-color: #fff;
-  padding:20px;
   font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#727272;
   font-weight:400;
   margin: 0;
-  padding-top: 40px;
+  width: 100%
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -100,21 +102,26 @@ a:hover small {
   color:#777;
 }
 
-.wrapper {
-  max-width: 930px;
-  margin:0 auto;
-}
-
 .grid-container {
+  max-width: 930px;
   min-height: calc(100vh - 60px);
   display: grid;
   grid-template-areas: 
     "sidebar feed" 
-    "footer feed";
+    "footer footer";
   grid-template-rows: auto 3em;
   grid-template-columns: 1fr 3fr;
   grid-column-gap: 20px;
   grid-row-gap: 20px;
+  padding-top: 2em;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+
+.grid-container > * {
+  padding-left: 1.5em;
+  padding-right: 1.5em;
 }
 
 .sidebar {
@@ -124,11 +131,12 @@ a:hover small {
 
 .content {
   grid-area: feed;
-  max-width: 680px;
+  max-width: calc(100vw - 230px);
 }
 
 .footer {
   grid-area: footer;
+  max-width: 100vw;
   text-align: center;
 }
 
@@ -191,13 +199,14 @@ header {
 }
 
 header > .image_wrapper {
-  width: 70%;
+  /*width: 70%;*/
   margin: 0 auto;
 }
 
 .profile-pic {
   border-radius: 50%;
   margin: 0 auto;
+  max-height: 150px;
 }
 
 .description {
@@ -216,12 +225,13 @@ strong {
 }
 
 header > .icons {
-  // width: 50%;
   text-align: center;
   margin: 0 auto;
   color:#222;
   padding-bottom:2em;
   padding-top:1em;
+  display: flex;
+  justify-content: center;
 }
 
 header > .icons a {
@@ -265,7 +275,7 @@ hr {}
 footer {}
 
 
-@media print, screen and (max-width: 930px) {
+@media print, screen and (max-width: 700px) {
   body {
     word-wrap: break-word;
   }
@@ -284,8 +294,8 @@ footer {}
 
   header > .image_wrapper {
     // text-align: center;
-    // max-height: 200px;
-    width: 40%;
+    max-height: 200px;
+    width: 50%;
     margin: 0 auto;
   }
 
@@ -297,37 +307,17 @@ footer {}
       "footer";
     grid-template-rows: auto auto auto;
     grid-template-columns: auto;
-    padding: 0px;
     grid-column-gap: 10px;
     grid-row-gap: 20px;
+    align-content: start;
     max-width: 100vw;
-
+    margin-left: auto;
+    margin-right: auto;
   }
-  .f {
-    max-width: 580px;
+
+  .content {
+    max-width: 100vw;
     margin: 0 auto;
-  }
-
-  .wrapper {
-    max-width: 680px;
-    margin:0 auto;
-  }
-
-}
-
-@media print, screen and (max-width: 480px) {
-    .grid-container {
-    display: grid;
-    grid-template-areas: 
-      "sidebar"
-      "feed" 
-      "footer";
-    grid-template-rows: auto auto auto;
-    grid-template-columns: auto;
-
-    padding: 0px;
-    grid-column-gap: 20px;
-    grid-row-gap: 20px;
   }
 }
 
