--- a/_layouts/pubs.html
+++ b/_layouts/pubs.html
@@ -15,7 +15,7 @@
             <small>{{ post.date | date: "%-d %B %Y" }}</small>
             <h1><a href="{{ post.url }}">{{ post.title}}</a></h1>
             <h4>{{ post.authors | join: ', ' }}</h4>
-            <p>{{ post.excerpt }} <a href="{{ post.url }}">continue...</a></p>
+            <p>{{ post.excerpt | strip_html | truncatewords: 50 }} <a href="{{ post.url }}">continue...</a></p>
         {% endfor %}
       {% else %}
         <p>No posts yet. </p>
