--- a/_layouts/sides.html
+++ b/_layouts/sides.html
@@ -14,7 +14,7 @@
         {% for post in side_posts  %}
             <small>{{ post.date | date: "%-d %B %Y" }}</small>
             <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
-            <p>{{ post.excerpt | strip_html | truncatewords: 50 }} <a href="{{ post.url }}">continue...</a></p>
+            <p>{{ post.excerpt | strip_html | truncatewords: 50 }} </p>
         {% endfor %}
       {% else %}
         <p>No posts yet. </p>
