--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,7 +14,12 @@
   </div>
   {% for item in site.navigation %}
       {% assign class = nil %}
-      {% if page.url contains item.url %}
+
+      {% assign test = page.url | split: "/" | slice: 1, 1 %}
+
+      {% if test.size == 0 and forloop.first %}
+          {% assign class = 'active' %}
+      {% elsif test.last contains item.url %}
           {% assign class = 'active' %}
       {% endif %}
       <h2><a href="{{ item.url | relative_url }}" class="{{ class }} category">
